--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "archiver": "^7.0.1",
     "bcrypt": "^5.1.1",
+    "bootstrap-icons": "^1.11.3",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
