--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
   "dependencies": {
     "archiver": "^7.0.1",
     "bcrypt": "^5.1.1",
-    "bootstrap-icons": "^1.11.3",
+    "canvas": "^2.11.2",
+    "chart.js": "^4.4.2",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
