--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "beautiful": "lint-staged",
-    "start": "nodemon --inspect src/index.js",
+    "start": "node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "node-sass --watch src/resources/scss/app.scss src/public/css/app.css"
   },
@@ -42,6 +42,7 @@
     "express-session": "^1.18.0",
     "firebase-admin": "^12.0.0",
     "fs": "^0.0.1-security",
+    "heroku-ssl-redirect": "^0.1.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^5.9.27",
     "multer": "^1.4.5-lts.1",
