chore: Update MongoDB URI and remove SSL redirect

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGODB_URI=mongodb+srv://onlyplayxerath:iEEzRNyrBjaPPfTt@cluster0.00l13mt.mongodb.net/web-group?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://duy392002:nYYyfzPCXSfiJoFN@cluster0.aygnqtr.mongodb.net/final-year?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=ABCDEFGH
 GMAIL_USERNAME=comp1640tcd0701@gmail.com
 GMAIL_PASSWORD=ujnl hqqf xdrj ehgc
